# bevy-mario-clone

./: Cargo.toml  README.md
.cargo/: config.toml
assets/levels/: 1-1.level.json  1-2.level.json  1-4.level.json  2-1.level.json  2-2.level.json  2-3.level.json  2-4.level.json  3-1.level.json  5-3.level.json  coin-clouds-1.level.json  coin-room-1.level.json  coin-room-2.level.json  coin-room-3.level.json  coin-room-4.level.json  coin-room-5.level.json  debug-coin.level.json  debug-flag.level.json  debug-level.level.json  debug-pipe.level.json  debug-progression.level.json  uw-entrance.level.json  uw-exit.level.json
assets/patterns/: castle.pattern.json  overworld.pattern.json  underwater.pattern.json  underworld.pattern.json
assets/sprites/: brick-shrapnel.sprite.json  bullet.sprite.json  castle.sprite.json  goomba-blue.sprite.json  goomba-brown.sprite.json  koopa-blue.sprite.json  overworld.json  overworld.sprite.json  piranha-plant.sprite.json  underwater.sprite.json  underworld.sprite.json
src/: assets.rs  config.rs  debug.rs  dev_tools.rs  level.rs  main.rs  map.rs  physics.rs
src/dev_tools/: custom.rs  mario_egui.rs  mod.rs  tilemap.rs
src/game/: animate.rs  assets.rs  mod.rs  movement.rs  patterns.rs  tiles.rs
src/game/animations/: goomba_animation.rs  mod.rs  player_animation.rs
src/game/entities/: goomba.rs  mod.rs  player.rs
src/game/physics/: components.rs  mod.rs  resources.rs  systems.rs  utils.rs
src/game/spawn/: entities.rs  level.rs  map.rs  mod.rs  player.rs
src/game/tiles/: components.rs  mod.rs  resources.rs  systems.rs  utils.rs
src/game/traits/: go.rs  jump.rs  mod.rs  solid.rs
src/levels/: level0.txt
src/physics/: mod.rs  utils.rs
src/screen/: loading.rs  mod.rs  playing.rs
src/screens/: loading.rs  mod.rs  playing.rs
