[package]
name = "mario"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
bevy_egui = "0.27.1"
bevy-inspector-egui = "0.25.0"
bevy_common_assets = {version = "0.11.0", features = ["json"]}
serde = "1.0"
