[package]
name = "mario"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_ecs_tilemap = "0.14"
bevy-inspector-egui = "0.25.0"
bevy_common_assets = {version = "0.11.0", features = ["json"]}
egui_dock = "0.13"
transform-gizmo-egui = "0.1"
seldom_state = "0.11.0"
serde = "1.0"
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"


[features]
default = [
    "dev",
]

dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
]


[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
